tests/neg/t0273.scala
class A

object Test {
def a = () => ()
def a[T] = (p:A) => ()              // error
def main(args: Array[String]) = ()
}
